# fry_course_materials

./: .gitignore  README.md
201008之前/Emmet/: 1、HTML速写之Emmet语法规则.html  2、Emmet语法.html
201009_Jupyter Notebook疑难问题/1、更改本地打开目录/: 1、Jupyter Notebook更改本地打开目录.ipynb
201106_概率论疑难问题/5、通俗理解中心极限定理/: 5、通俗理解中心极限定理.ipynb
220310_强化学习玩马里奥/: 库版本信息.md
220310_强化学习玩马里奥/00_强化学习玩马里奥课程介绍/: 00_强化学习玩马里奥课程介绍.md
220310_强化学习玩马里奥/01_超级马里奥环境安装/: 超级马里奥环境安装.ipynb
220310_强化学习玩马里奥/02_运行超级马里奥/: 运行超级马里奥.ipynb
220310_强化学习玩马里奥/03_马里奥环境代码说明/: 马里奥环境代码说明.ipynb
220310_强化学习玩马里奥/04_stable-baselines3库介绍/: stable-baselines3库介绍.ipynb
220310_强化学习玩马里奥/05_最最简单的超级马里奥训练过程/: 最最简单的超级马里奥训练过程.ipynb  马里奥的测试代码.ipynb
220310_强化学习玩马里奥/08_保存最优模型/: 保存最优模型.ipynb
220310_强化学习玩马里奥/11_超参数调优库optuna介绍/: 超参数调优库optuna介绍.ipynb
220310_强化学习玩马里奥/13_用选好超参数的模型去训练/: 用选好超参数的模型去训练.ipynb
220310_强化学习玩马里奥/230521：粉丝对版本改变提的解决方法/: 对应代码：MARIO.py
220412-计算机视觉几分钟精通系列/: 计算机视觉几分钟精通系列课程资料.md
220412-计算机视觉几分钟精通系列/Course_Materials/: 计算机视觉几分钟精通系列课程资料.md
220412-计算机视觉几分钟精通系列/课程资料/: 计算机视觉几分钟精通系列课程资料.md
230226_tensorboard/: tensorboard使用.md
230226_tensorboard/P1/: tensorboardSimpleDemo.py
230226_tensorboard几分钟精通课程/: tensorboard使用.md  课程简介.md
230226_tensorboard几分钟精通课程/P3_tensorboard常见功能/: P3_tensorboard常见功能-demo.py
230226_tensorboard几分钟精通课程/P4_常见tensorboard使用实例/: 1、可视化训练情况.py  2、可视化训练集数据.py  3、可视化网络模型.py  4、可视化Precision-Recall曲线.py
230507_opencv-python几分钟精通课程/: 课程介绍.md
230507_opencv-python几分钟精通课程/【100：课件及代码】/: fry_cv_utils.py  【0-1】、课程介绍及opencv-python安装.ipynb  【1-1】、3分钟学会彩色图片转灰度图-opencv.ipynb  【1-2】、7分钟学会图像二值化-opencv.ipynb  【1-3】、3分钟学会图像自适应二值化-opencv.ipynb
230721_深度学习几分钟精通课程/: readme.md
230721_深度学习几分钟精通课程/230723-focal-loss/: _230721_fry_focal-loss.py  focal_loss.py
230721_深度学习几分钟精通课程/230726-OhemCELoss/: analysis-20230726-202438.md  ohemCELoss.py  test.py
230721_深度学习几分钟精通课程/230727-L1Loss/: l1_loss.py
230721_深度学习几分钟精通课程/230727-MSELoss/: mse.py
230721_深度学习几分钟精通课程/230729-Smooth-L1-Loss/: smoothL1Loss.py
230721_深度学习几分钟精通课程/230802-交叉熵损失函数/: CELoss.py  analysis-20230730-000559.md
240206_Cuda/: README.md
240206_Cuda/_01_cmake/: CMakeLists.txt  main.cu
240206_Cuda/_02_cmake配置文件及代码介绍/: cudaDeviceSynchronize的作用.md
240206_Cuda/_03_No_CUDA_toolset_found_error/: 亲测.md
240206_Cuda/_06_add_demo/: CMakeLists.txt  add_demo.cu
240206_Cuda/_06_cuda编程原理介绍/: 常见问题.md
240206_Cuda/_07_add_demo2/: CMakeLists.txt  add_demo.cu
240206_Cuda/_09_copyImage_c1/: CMakeLists.txt  copyImg.cu
240206_Cuda/_10_copyImage_c3/: CMakeLists.txt  copyImgC3.cu
240206_Cuda/_11_check_device/: CMakeLists.txt  check_device.cu
240206_Cuda/_12_SM/: SM-流多处理器.pptx  cuda核心.md  流式多处理器.md
240206_Cuda/_13_Function_Qualifiers/: CMakeLists.txt  cuda限定词的含义.md  function_qualifiers.cu
240206_Cuda/_13_函数类型限定词/: copyImgC3.cu  cuda限定词的含义.md
240206_Cuda/_14_matrix_multiplication/: CMakeLists.txt  matrix_multiplication.cu  为何cpu和gpu的结果有轻微的差异.md
240206_Cuda/_15_Rezise/: CMakeLists.txt  resize.cu  resize.cuh  resize_demo.cpp
240206_Cuda/__补充01_vs2022中直接创建cuda项目/: main.cu
240206_Cuda/__补充02_安装cuda12.5_/: cuda12.5安装详情.md
240206_Cuda编程从入门到大神/: README.md
240206_Yolov8/: README.md
240206_Yolov8/_02_环境安装/: pip_list对应的包.txt  requirements_yolov8D3.txt  环境安装.md
240206_Yolov8/ultralytics_fry/: .gitignore
240217_Cmake/: README.md
240217_Cmake/_01_CUDA/: CMakeLists.txt
240217_Cmake/_02_OpenCV/: CMakeLists.txt  opencv_basic_demo.cpp
240219_CALM_AI/: README.md
240512_FryAITools/_200_项目说明/: 项目说明.md
240819_LibTorch_Demo/: libtorch实例课程大纲.md
240819_LibTorch_Demo/02_libtorch_basic_demo/: CMakeLists.txt  libtorch_basic_demo.cpp
C++疑难/: C++疑难.code-workspace
C++疑难/1、bitset用法/: 2、可用的操作符.cpp
ES6课程/10、promise对象/: 1、回调函数做异步.html  2、promise对象.html
ES6课程/11、promise对象实例/: 1、promise对象实例.html
ES6课程/12、面向对象/: 1.html
ES6课程/1、ECMAScript介绍/: 1.html
ES6课程/2、ES5严格模式/: 1.html
ES6课程/4、对象的简写方式/: 1.html
ES6课程/6、解构赋值/: 1.html
ES6课程/7、箭头函数/: 4、箭头函数使用场景.html
ES6课程/9、三点运算符/: 1.html
JS字符串常用方法/2、字符串填充/: padStart()和padEnd().html
JS字符串常用方法/3、字符串重复/: repeat().html
JS字符串常用方法/4、子串/: substring().html
JS字符串常用方法/5、字符串分割/: split().html
JS字符串常用方法/8、字符串查找/: endsWith().html  indexOf().html  lastIndexOf().html  startsWith().html
JS字符串常用方法/9、字符串匹配/: match().html
JS数组常用方法/1、课程介绍/: 1.html
JS数组常用方法/2、push方法使用及原理/: 1.html
Javascript进阶课程/1、使用工厂模式创建对象/: 1.html
Javascript进阶课程/3、构造函数创建对象的不足/: 1.html
VSCode使用/test/: hello.cpp
VUE实例课程/1、计算属性实现列表的搜索和排序/: 1、计算属性实现列表的搜索和排序.html
VUE实例课程/3、定时显示隐藏元素/: 1、定时显示隐藏元素.html
VUE实例课程/5、vue网格动画/: 2、vue列表动画.html  4、vue网格动画.html
VUE实例课程/7、动画钩子函数/: 1、动画钩子函数.html
VUE实例课程/8、列表动画/: 1、列表动画.html
VUE疑难问题/2、方法和计算属性的区别/: 1、计算属性和方法的区别.html
VUE课程/10、跑马灯效果/: 2.html
VUE课程/13、双向数据绑定v-model/: 1.html
VUE课程/14、使用v-model实现简单计算器/: 2.html
VUE课程/16、style样式绑定/: 1.html
VUE课程/17、循环指令v-for/: 1.html
VUE课程/18、v-for中key属性使用/: 1.html
VUE课程/19、条件渲染v-if/: 1.html
VUE课程/2、VUE最简单实例/: 1.html
VUE课程/3、VUE最简单双向数据绑定实例/: 1.html
css3疑难问题/2、BFC是什么及实例/: 2、利用bfc解决float高度塌陷.html
css3疑难问题/3、为什么clear属性用在内联元素上面没有作用/: clear属性不能作用在内联元素上的应用.html
css3疑难问题/5、单冒号before和双冒号before的区别/: 1.html
daily_test/200224/: 1、媒体查询介绍.html  2、css3媒体查询.html  3、媒体属性.html  4、媒体查询逻辑连接符.html
daily_test/200227/: 1、unicode编码.html  2、NaN的相等性判断.html
daily_test/200229/: 1、switch语句.html  2、求1-100里面的质数.html  3、break和continue.html
daily_test/200302/: 1、对象操作.html  2.html
daily_test/200305/: 1.html  1、声明提前.html  3、闭包.html
html(html5)/12、html5总结/: 1.html
html(html5)/2、html常用标签/: 2.html
html(html5)/3、图片和超链接/: a标签小实例.html  img小实例.html
html(html5)/5、列表/: 1.html
html(html5)/6、表格/: 1.html
html(html5)/9、video、audio、canvas和svg元素略讲/: 3、canvas.html  4、svg.html
javascript疑难问题/12、函数节流/: 1、demo.html
javascript疑难问题/13、函数防抖/: 1、demo.html
javascript疑难问题/15、类数组对象/: 1.html
javascript疑难问题/17、js中in关键字使用总结/: 2、in关键字在vue中的使用.html
javascript疑难问题/18、回调函数做异步操作/: 1.html
javascript疑难问题/2、js类型转换的常见方式/: 1.html
javascript疑难问题/7、使用var和不使用var声明变量的区别/: 1.html
python超简单实用爬虫操作/: python超简单实用爬虫操作.ipynb
算法与数据结构（C++实现）/: 算法与数据结构（C++实现）.code-workspace
算法与数据结构（C++实现）/2、枚举/: 1、.cpp  (+2 more)
(+2203 files in other folders)
